Avoid traditions/traits line wrapping

--- a/src/styles/item/_index.scss
+++ b/src/styles/item/_index.scss
@@ -20,6 +20,14 @@
     }
 
     form {
+        .tagify > span {
+            min-width: 40px;
+        }
+
+        .tagify--hasMaxTags > span {
+            display: none;
+        }
+
         @import "abc-sheet";
         @import "activations";
         @import "identify-item";
