--- a/src/styles/ui/_tags.scss
+++ b/src/styles/ui/_tags.scss
@@ -134,7 +134,7 @@
         > div {
             border-radius: 0;
             display: flex;
-            font: 500 var(--font-size-11) var(--sans-serif);
+            font: 500 var(--font-size-10) var(--sans-serif);
             padding: 0.15em;
 
             .tagify__tag-text {
